--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Badges - README
         uses: pemtajo/badge-readme@main
         with:
-          CREDLY_USER: "kim-yeonho"
+          CREDLY_USER: "junpyo-hong"
